[package]
name = "ru402"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = [ "derive"] }
csv = "1.3.0"
redis = { version = "0.25.3", features = ["json"] }
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

